--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,9 @@
         <h2 class="logo">Martchello <span> Pizzaria </span></h2>
         <button type="button">Cadastre-se</button>
             <ul>
-                <li><a href="#">Pedidos-Restaurante</a></li>
-                <li><a href="#">Pedidos-Clientes</a></li>
-                <li><a href="#">Sobre Nós</a></li>
+                <li><a href="./PedidosRestaurante.html">Pedidos-Restaurante</a></li>
+                <li><a href="./PedidosClientes.html">Pedidos-Clientes</a></li>
+                <li><a href="./sobrenos.html">Sobre Nós</a></li>
             </ul>
             <div class="menu-openner"><span>0</span>🛒</div>
     </nav>
