--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Josefin Sans', sans-serif;
 }
 
 body {
@@ -12,10 +11,12 @@ body {
     font-family: 'Lato', Helvetica, Arial;
     font-size: 15px;
     margin: 0;
+    overflow-x: hidden;
     
 }
 body::-webkit-scrollbar {
     width: 8px;
+  
 }
 
 body::-webkit-scrollbar-track {
@@ -23,7 +24,7 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-    background: rgb(0, 0, 0);
+    background: rgba(255, 0, 0, 0.311);
     border-radius: 10px;
 }
 
@@ -40,6 +41,7 @@ body::-webkit-scrollbar-thumb {
     font-size: 28px;
     margin-right: 20.50%;
     padding-top: 0.9%;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 span{
@@ -90,11 +92,17 @@ button{
     margin-top: 0.8%;
 }
 
+
+
 button:hover{
     transform: scale(1.3);
     cursor: pointer;
 }
 
+button, a{
+    text-decoration: none;
+    color: white;
+}
 
 .inicio {
     height: 100vh;
@@ -305,6 +313,7 @@ h2 {
 
 #PizzasProntas{
 color: white ;
+margin-bottom: 50px;
 }
 
 .pizza-area {
@@ -377,6 +386,7 @@ color: white ;
 }
 
 .pizzaWindowArea {
+    z-index: 1;
     position: fixed;
     left: 0;
     top: 0;
@@ -1137,125 +1147,4 @@ footer{
     text-decoration: none;
   }
   
-     /* style login */
-     #myDIV{
-        display: none;
-      
-     }
-
-     #myDIV2{
-        display: none;
-     }
-
-
-     .container {
-        background-color: #fafafa;
-        border-radius: 10px;
-        width: 400px;
-        height: 100vh;
-        max-width: 100%;
-        overflow: hidden;
-        margin: 0 auto;
-        z-index: 10;
-        margin-left: 400px;
-        display: none;
-    
-      }
-
-
-      #btnLogin{
-        border: none;
-        background: #ea1538;
-        justify-content: space-between;
-        padding: 12px 30px;
-        border-radius: 30px;
-        color: white;
-        font-weight: bold;
-        font-size: 15px;
-        transition: .4s;
-        margin-right: 1%;
-      }
-
-  .container2 {
-    background-color: #fafafa;
-    border-radius: 10px;
-    width: 400px;
-    height: 100vh;
-    max-width: 100%;
-    overflow: hidden;
-    margin: 0 auto;
-    z-index: 10;
-    margin-left: 400px;
-
-  }
-  
-  .header {
-    background-color: rgb(255, 0, 0);
-    padding: 20px;
-  }
-  .header, h2{
-    color: white;
-  }
-  
-  .form {
-    padding: 20px;
-  }
-  
-  .form-control {
-    margin-bottom: 10px;
-    padding-bottom: 20px;
-    position: relative;
-  }
-  
-  .form-control label {
-    display: inline-block;
-    margin-bottom: 5px;
-  }
-  
-  .form-control input {
-    border: 2px solid #f0f0f0;
-    display: block;
-    border-radius: 10px;
-    font-size: 14px;
-    width: 100%;
-    padding: 10px;
-  }
-  
-  .form-control i {
-    position: absolute;
-    top: 45px;
-    right: 10px;
-    visibility: hidden;
-  }
-  
-  .form-control small {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    visibility: hidden;
-  }
-
-  
-  /* Error and Success */
-  .form-control.success input {
-    border-color: #2ecc71;
-  }
-  
-  .form-control.error input {
-    border-color: #e74c3c;
-  }
-  
-  .form-control.success i.fa-check-circle {
-    color: #2ecc71;
-    visibility: visible;
-  }
-  
-  .form-control.error i.fa-exclamation-circle {
-    color: #e74c3c;
-    visibility: visible;
-  }
-  
-  .form-control.error small {
-    visibility: visible;
-    color: #e74c3c;
-  }
+ 
